--- a/src/WebAPPs/SPA/Blazor.WASM/Pages/Index.razor
+++ b/src/WebAPPs/SPA/Blazor.WASM/Pages/Index.razor
@@ -9,7 +9,7 @@
 
 <MatH2>@StringLocalizer["We do NOT work with old technologies what you have to rewrite after 2-3 years"]@*A cégünk nem foglalkozik a régi rendszerekkel, amit 1-2 éven belűl már le kell cserélni*@</MatH2>
 @*kép*@
-<MatH2>@StringLocalizer["We only work with the latest and best technologies, because that is what our clients deserve for their money."]@*Mi csak is a legújabb, és a projekthez legjobb technológiákat használjuk, mert mindenki meg érdemli azt hogy a lehető legújabb technológiát kapja a befektetésébe.*@</MatH2>
+<MatH2>@StringLocalizer["We only work with the latest and greatest technologies, because that is what our clients deserve for their money."]@*Mi csak is a legújabb, és a projekthez legjobb technológiákat használjuk, mert mindenki meg érdemli azt hogy a lehető legújabb technológiát kapja a befektetésébe.*@</MatH2>
 @*kép*@
 
 
